feat: ROLE_USER default + report controller auth