@@ -7,11 +7,12 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Entity @Data
-public class User implements UserDetails {         // ← implementa
+public class User implements UserDetails {
 
+    /* ====== Campos persistidos ====== */
     @Id @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
@@ -21,27 +22,27 @@ public class User implements UserDetails {         // ← implementa
     @Column(nullable = false)
     private String password;
 
-    /* -------- Perfil básico -------- */
+    /* Perfil básico */
     private String firstName, lastName;
     private Integer age;
     private Double heightCm, weightKg;
 
-    /* -------- Medidas (cm) -------- */
+    /*  ───­ Medidas y fotos (puedes mantener el resto de tus campos) ─── */
     private Double neckCm, chestCm, waistCm, lowerAbsCm, hipCm,
             bicepsCm, bicepsFlexCm, forearmCm, thighCm, calfCm;
-
-    /* -------- Fotos (URLs) -------- */
     private String frontImgUrl, sideImgUrl, backImgUrl;
 
-    /* === Métodos UserDetails (implementación mínima) === */
-    @Override public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();        // sin roles
+    /* ====== Implementación UserDetails ====== */
+    /** Rol por defecto para cualquier usuario autenticado. */
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return List.of(() -> "ROLE_USER");
     }
-    @Override public String getUsername() { return email; }
-    @Override public String getPassword() { return password; }
 
-    @Override public boolean isAccountNonExpired()     { return true; }
-    @Override public boolean isAccountNonLocked()      { return true; }
-    @Override public boolean isCredentialsNonExpired() { return true; }
-    @Override public boolean isEnabled()               { return true; }
+    @Override public String  getUsername()              { return email;    }
+    @Override public String  getPassword()              { return password; }
+    @Override public boolean isAccountNonExpired()      { return true;     }
+    @Override public boolean isAccountNonLocked()       { return true;     }
+    @Override public boolean isCredentialsNonExpired()  { return true;     }
+    @Override public boolean isEnabled()                { return true;     }
 }
